Markup and styling finished. Needs proofing.

--- a/index.html
+++ b/index.html
@@ -48,20 +48,19 @@
     <h3 id="team">Team</h3>
     <p>We're Hiring!</p>
     <h3 id="contact">Contact</h3>
-    <p>Phone: (555)-555-5555 <br> E-mail: test@example.com <br> Twitter: @test</p>
+    <p>Phone: (555)-555-5555</p> 
+    <p>E-mail: test@example.com</p> 
+    <p>Twitter: @test</p>
   </section>
 
   <footer>
-    <p>Broadway 2016</p>
-    <nav id="footer-nav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#portfolio">Work</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <p>&copy; Broadway 2016
+      <a href="index.html">Home</a>
+      <a href="#about">About</a>
+      <a href="#portfolio">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
+    </p>
   </footer>
   
 </body>
